--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,8 @@ jwt.expiration=86400000
 api.title=Task Management API
 api.version=1.0
 api.description=REST API for Task Management System with JWT Authentication
+
+# Default Admin User Configuration (used by DataInitializer)
+admin.default.name=System Admin
+admin.default.email=admin@system.com
+admin.default.password=admin123
