Strategy Pattern Changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 # Database Configuration
 spring.application.name=api-project
 
-# PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/devdb
-spring.datasource.username=devuser
-spring.datasource.password=devpass
-spring.datasource.driver-class-name=org.postgresql.Driver
-
+# This looks for the variable from Docker. 
+# If it doesn't find it, it defaults to localhost (useful for local testing)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/devdb}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:devuser}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:devpass}
 # JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
